--- a/index.html
+++ b/index.html
@@ -400,7 +400,7 @@
                 <div class="row"> 
                     <div class="col-lg-8 ml-auto mr-auto"> 
                         <h5 class="text-danger">Who Are We</h5> 
-                        <h2 class="h1 mb-4 text-dark">We are one of the fastest scaling startup in the city</h2>
+                        <h2 class="h1 mb-4 text-dark">I made changes.</h2>
                         <div class="embed-responsive embed-responsive-16by9 mb-4"> 
                             <iframe width="560" src="https://www.youtube.com/embed/ITSMOYJ6usA" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen style="max-width: 100%;" class="embed-responsive-item"></iframe>
                         </div>                         
