--- a/_pgbackup/index_1616827169.html
+++ b/_pgbackup/index_1616827169.html
@@ -17,9 +17,9 @@
             <div class="top"> 
                 <!-- Logo -->                 
                 <div id="logo"> 
-                    <span class="image avatar48"><img alt="" src="images/xin.jpg"/></span> 
+                    <span class="image avatar48"><img src="../../Desktop/Screenshot_34.jpg" alt=""/></span> 
                     <h1 id="title">Shamiya Lin</h1> 
-                    <p>High School Student</p> 
+                    <p>绝望的高中生</p> 
                 </div>                 
                 <!-- Nav -->                 
                 <nav id="nav"> 
@@ -41,7 +41,7 @@
             </div>             
             <div class="bottom"> 
                 <!-- Social Icons -->                 
-                <ul class="icons"> 
+                <ul class="icons">
                     <li>
                         <a href="#" class="icon brands fa-twitter"><span class="label">Twitter</span></a>
                     </li>                     
@@ -55,8 +55,8 @@
                         <a href="#" class="icon brands fa-dribbble"><span class="label">Dribbble</span></a>
                     </li>                     
                     <li>
-                        <a href="#" class="icon solid fa-envelope"><span class="label">Email</span></a>
-                    </li>                     
+                        <span class="label"><a href="#" class="icon solid fa-envelope">Email</a>&nbsp;</span>
+                    </li>
                 </ul>                 
             </div>             
         </div>         
@@ -66,11 +66,12 @@
             <section id="top" class="one dark cover"> 
                 <div class="container"> 
                     <header> 
-                        <h2 class="alt">Obra D. Tompkins High School</h2> 
-                        <p>Avitae natoque dictum sollicitudin elementum.</p> 
+                        <h2 class="alt">Hi! I&apos;m <strong>Prologue</strong>, a <a href="http://html5up.net/license">free</a> responsive<br>Shamiya Lin,  a sophomore at Obra D. Tompkins High School is passionate about competitive crochet and linen weaving.  She took AP Crochet at the age of 8 in 3rd grade. With much experience she has won many awards and showed dedication to the field.<br></h2> 
+                        <p>Ligula scelerisque justo sem accumsan diam quis<br/>
+								vitae natoque dictum sollicitudin elementum.</p> 
                     </header>                     
                     <footer> 
-                        <a href="#portfolio" class="button scrolly">Profile</a> 
+                        <a href="#portfolio" class="button scrolly">Magna Aliquam</a> 
                     </footer>                     
                 </div>                 
             </section>             
@@ -78,7 +79,7 @@
             <section id="portfolio" class="two"> 
                 <div class="container"> 
                     <header> 
-                        <h2>Profile</h2> 
+                        <h2>Portfolio</h2> 
                     </header>                     
                     <p>Vitae natoque dictum etiam semper magnis enim feugiat convallis convallis
 							egestas rhoncus ridiculus in quis risus amet curabitur tempor orci penatibus.
