--- a/_pgbackup/index_1616827336.html
+++ b/_pgbackup/index_1616827336.html
@@ -17,7 +17,7 @@
             <div class="top"> 
                 <!-- Logo -->                 
                 <div id="logo"> 
-                    <span class="image avatar48"><img alt="" src="images/xin.jpg"/></span> 
+                    <span class="image avatar48"><img src="../../Desktop/Screenshot_34.jpg" alt=""/></span> 
                     <h1 id="title">Shamiya Lin</h1> 
                     <p>High School Student</p> 
                 </div>                 
@@ -70,7 +70,7 @@
                         <p>Avitae natoque dictum sollicitudin elementum.</p> 
                     </header>                     
                     <footer> 
-                        <a href="#portfolio" class="button scrolly">Profile</a> 
+                        <a href="#portfolio" class="button scrolly">Magna Aliquam</a> 
                     </footer>                     
                 </div>                 
             </section>             
@@ -78,7 +78,7 @@
             <section id="portfolio" class="two"> 
                 <div class="container"> 
                     <header> 
-                        <h2>Profile</h2> 
+                        <h2>Portfolio</h2> 
                     </header>                     
                     <p>Vitae natoque dictum etiam semper magnis enim feugiat convallis convallis
 							egestas rhoncus ridiculus in quis risus amet curabitur tempor orci penatibus.
