--- a/_pgbackup/index_1616826975.html
+++ b/_pgbackup/index_1616826975.html
@@ -17,9 +17,9 @@
             <div class="top"> 
                 <!-- Logo -->                 
                 <div id="logo"> 
-                    <span class="image avatar48"><img alt="" src="images/xin.jpg"/></span> 
+                    <span class="image avatar48"><img src="../../Desktop/Screenshot_34.jpg" alt=""/></span> 
                     <h1 id="title">Shamiya Lin</h1> 
-                    <p>High School Student</p> 
+                    <p>绝望的高中生</p> 
                 </div>                 
                 <!-- Nav -->                 
                 <nav id="nav"> 
@@ -66,11 +66,11 @@
             <section id="top" class="one dark cover"> 
                 <div class="container"> 
                     <header> 
-                        <h2 class="alt">Obra D. Tompkins High School</h2> 
-                        <p>Avitae natoque dictum sollicitudin elementum.</p> 
+                        <h2 class="alt">Remember to apply for the Youth in Physics Summer Program!<br></h2> 
+                        <p>Application Deadline: May 1st 2021</p> 
                     </header>                     
                     <footer> 
-                        <a href="#portfolio" class="button scrolly">Profile</a> 
+                        <a href="#portfolio" class="button scrolly">Click Me</a> 
                     </footer>                     
                 </div>                 
             </section>             
@@ -78,18 +78,15 @@
             <section id="portfolio" class="two"> 
                 <div class="container"> 
                     <header> 
-                        <h2>Profile</h2> 
+                        <h2>Portfolio</h2> 
                     </header>                     
-                    <p>Vitae natoque dictum etiam semper magnis enim feugiat convallis convallis
-							egestas rhoncus ridiculus in quis risus amet curabitur tempor orci penatibus.
-							Tellus erat mauris ipsum fermentum etiam vivamus eget. Nunc nibh morbi quis
-							fusce hendrerit lacus ridiculus.</p> 
+                    <p>Shamiya Lin,  a sophomore at Obra D. Tompkins High School is passionate about competitive crochet and linen weaving.  She took AP Crochet at the age of 8 in 3rd grade. With much experience she has won many awards and showed dedication to the field.</p> 
                     <div class="row"> 
                         <div class="col-4 col-12-mobile"> 
                             <article class="item"> 
                                 <a href="#" class="image fit"><img src="images/pic02.jpg" alt=""/></a> 
                                 <header> 
-                                    <h3>Ipsum Feugiat</h3> 
+                                    <h3>Mathematics</h3> 
                                 </header>                                 
                             </article>                             
                             <article class="item"> 
@@ -101,15 +98,15 @@
                         </div>                         
                         <div class="col-4 col-12-mobile"> 
                             <article class="item"> 
-                                <a href="#" class="image fit"><img src="images/pic04.jpg" alt=""/></a> 
+                                <a href="#" class="image fit"><img src="https://images.unsplash.com/photo-1486312338219-ce68d2c6f44d?crop=entropy&cs=tinysrgb&fit=max&fm=jpg&ixid=MnwyMDkyMnwwfDF8c2VhcmNofDJ8fGNvbXB1dGVyfGVufDB8fHx8MTYxNjgyNjU2Mg&ixlib=rb-1.2.1&q=80&w=1080" alt=""/></a> 
                                 <header> 
-                                    <h3>Magna Nullam</h3> 
+                                    <h3>Computer Science</h3> 
                                 </header>                                 
                             </article>                             
                             <article class="item"> 
-                                <a href="#" class="image fit"><img src="images/pic05.jpg" alt=""/></a> 
+                                <a href="#" class="image fit"><img src="https://images.unsplash.com/photo-1486825586573-7131f7991bdd?crop=entropy&cs=tinysrgb&fit=max&fm=jpg&ixid=MnwyMDkyMnwwfDF8c2VhcmNofDF8fHNjaWVuY2UlMjBvbHltcGlhZHxlbnwwfHx8fDE2MTY4MjY1ODk&ixlib=rb-1.2.1&q=80&w=1080" alt=""/></a> 
                                 <header> 
-                                    <h3>Natoque Vitae</h3> 
+                                    <h3>Science Olympiad</h3> 
                                 </header>                                 
                             </article>                             
                         </div>                         
@@ -117,13 +114,13 @@
                             <article class="item"> 
                                 <a href="#" class="image fit"><img src="images/pic06.jpg" alt=""/></a> 
                                 <header> 
-                                    <h3>Dolor Penatibus</h3> 
+                                    <h3>Physics</h3> 
                                 </header>                                 
                             </article>                             
                             <article class="item"> 
                                 <a href="#" class="image fit"><img src="images/pic07.jpg" alt=""/></a> 
                                 <header> 
-                                    <h3>Orci Convallis</h3> 
+                                    <h3>Model UN</h3> 
                                 </header>                                 
                             </article>                             
                         </div>                         
