--- a/_pgbackup/index_1616828250.html
+++ b/_pgbackup/index_1616828250.html
@@ -17,7 +17,7 @@
             <div class="top"> 
                 <!-- Logo -->                 
                 <div id="logo"> 
-                    <span class="image avatar48"><img alt="" src="images/pic01.jpg"/></span> 
+                    <span class="image avatar48"><img alt="" src="images/xin.jpg"/></span> 
                     <h1 id="title">Shamiya Lin</h1> 
                     <p>High School Student</p> 
                 </div>                 
@@ -137,7 +137,7 @@
                     <header> 
                         <h2>About Me</h2> 
                     </header>                     
-                    <a href="#" class="image featured"><img src="images/image.jpg" alt=""></a> 
+                    <a href="#" class="image featured"><img src="images/banner.jpg" alt=""/></a> 
                     <p>Tincidunt eu elit diam magnis pretium accumsan etiam id urna. Ridiculus
 							ultricies curae quis et rhoncus velit. Lobortis elementum aliquet nec vitae
 							laoreet eget cubilia quam non etiam odio tincidunt montes. Elementum sem
