--- a/_pgbackup/index_1616828083.html
+++ b/_pgbackup/index_1616828083.html
@@ -17,7 +17,7 @@
             <div class="top"> 
                 <!-- Logo -->                 
                 <div id="logo"> 
-                    <span class="image avatar48"><img alt="" src="images/pic01.jpg"/></span> 
+                    <span class="image avatar48"><img alt="" src="images/xin.jpg"/></span> 
                     <h1 id="title">Shamiya Lin</h1> 
                     <p>High School Student</p> 
                 </div>                 
@@ -63,23 +63,22 @@
         <!-- Main -->         
         <div id="main"> 
             <!-- Intro -->             
-            <section id="top" class="one dark cover">
+            <section id="top" class="one dark cover"> 
                 <div class="container"> 
                     <header> 
-                        <h2 class="alt"><br></h2>
                         <h2 class="alt">Obra D. Tompkins High School</h2> 
-                        <p>Class of 2023</p> 
+                        <p>Avitae natoque dictum sollicitudin elementum.</p> 
                     </header>                     
                     <footer> 
-                        <a href="#portfolio"></a> 
+                        <a href="#portfolio" class="button scrolly">Profile</a> 
                     </footer>                     
-                </div>
+                </div>                 
             </section>             
             <!-- Portfolio -->             
             <section id="portfolio" class="two"> 
                 <div class="container"> 
                     <header> 
-                        <h2>Portfolio</h2> 
+                        <h2>Profile</h2> 
                     </header>                     
                     <p>Vitae natoque dictum etiam semper magnis enim feugiat convallis convallis
 							egestas rhoncus ridiculus in quis risus amet curabitur tempor orci penatibus.
@@ -90,13 +89,13 @@
                             <article class="item"> 
                                 <a href="#" class="image fit"><img src="images/pic02.jpg" alt=""/></a> 
                                 <header> 
-                                    <h3>Mud Job</h3> 
+                                    <h3>Ipsum Feugiat</h3> 
                                 </header>                                 
                             </article>                             
                             <article class="item"> 
                                 <a href="#" class="image fit"><img src="images/pic03.jpg" alt=""/></a> 
                                 <header> 
-                                    <h3>In Love</h3> 
+                                    <h3>Rhoncus Semper</h3> 
                                 </header>                                 
                             </article>                             
                         </div>                         
@@ -104,13 +103,13 @@
                             <article class="item"> 
                                 <a href="#" class="image fit"><img src="images/pic04.jpg" alt=""/></a> 
                                 <header> 
-                                    <h3>Amazed</h3> 
+                                    <h3>Magna Nullam</h3> 
                                 </header>                                 
                             </article>                             
                             <article class="item"> 
                                 <a href="#" class="image fit"><img src="images/pic05.jpg" alt=""/></a> 
                                 <header> 
-                                    <h3>Pleading</h3> 
+                                    <h3>Natoque Vitae</h3> 
                                 </header>                                 
                             </article>                             
                         </div>                         
@@ -118,13 +117,13 @@
                             <article class="item"> 
                                 <a href="#" class="image fit"><img src="images/pic06.jpg" alt=""/></a> 
                                 <header> 
-                                    <h3>Umm what</h3> 
+                                    <h3>Dolor Penatibus</h3> 
                                 </header>                                 
                             </article>                             
                             <article class="item"> 
                                 <a href="#" class="image fit"><img src="images/pic07.jpg" alt=""/></a> 
                                 <header> 
-                                    <h3>Breakfast</h3> 
+                                    <h3>Orci Convallis</h3> 
                                 </header>                                 
                             </article>                             
                         </div>                         
@@ -137,7 +136,7 @@
                     <header> 
                         <h2>About Me</h2> 
                     </header>                     
-                    <a href="#" class="image featured"><img src="images/image.jpg" alt=""></a> 
+                    <a href="#" class="image featured"><img src="images/pic08.jpg" alt=""/></a> 
                     <p>Tincidunt eu elit diam magnis pretium accumsan etiam id urna. Ridiculus
 							ultricies curae quis et rhoncus velit. Lobortis elementum aliquet nec vitae
 							laoreet eget cubilia quam non etiam odio tincidunt montes. Elementum sem
@@ -148,33 +147,41 @@
             </section>             
             <!-- Contact -->             
             <section id="contact" class="four"> 
-                <div class="container">
+                <div class="container"> 
                     <header> 
                         <h2>Contact</h2> 
                     </header>                     
-                    <p>If anything, contact me via email: shamiya@foxmail.com</p>
-                    <p>or spam my serf, Rohini Das</p> 
+                    <p>Elementum sem parturient nulla quam placerat viverra
+							mauris non cum elit tempus ullamcorper dolor. Libero rutrum ut lacinia
+							donec curae mus. Eleifend id porttitor ac ultricies lobortis sem nunc
+							orci ridiculus faucibus a consectetur. Porttitor curae mauris urna mi dolor.</p> 
                     <form method="post" action="#"> 
                         <div class="row"> 
-                            <div class="col-6 col-12-mobile"></div>                             
-                            <div class="col-6 col-12-mobile"></div>                             
+                            <div class="col-6 col-12-mobile">
+                                <input type="text" name="name" placeholder="Name"/>
+                            </div>                             
+                            <div class="col-6 col-12-mobile">
+                                <input type="text" name="email" placeholder="Email"/>
+                            </div>                             
                             <div class="col-12"> 
-</div>                             
+                                <textarea name="message" placeholder="Message"></textarea> 
+                            </div>                             
                             <div class="col-12"> 
-</div>                             
+                                <input type="submit" value="Send Message"/> 
+                            </div>                             
                         </div>                         
-                    </form>
+                    </form>                     
                 </div>                 
             </section>             
         </div>         
         <!-- Footer -->         
         <div id="footer"> 
             <!-- Copyright -->             
-            <ul class="copyright">
-                <li>&copy; ShamiyaL. All rights reserved.</li>
+            <ul class="copyright"> 
+                <li>&copy; Untitled. All rights reserved.</li>
                 <li>Design: 
                     <a href="http://html5up.net">HTML5 UP</a>
-                </li>
+                </li>                 
             </ul>             
         </div>         
         <!-- Scripts -->         
